<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/strHelpDescription"
        android:id="@+id/tvHelpUs" />

    <Button
        android:background="@drawable/button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strNewDitloid"
        android:id="@+id/btnNewDitloid"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="#8a2b01" />

    <Button
        android:background="@drawable/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strSignalError"
        android:id="@+id/btnSignalError"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="#8a2b01" />

    <Button
        android:background="@drawable/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strGiveTip"
        android:id="@+id/btnGiveTip"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="#8a2b01" />

</LinearLayout>