<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


        <Button
            android:id="@+id/btnPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:text="@string/strPlay"
            android:textColor="#8a2b01"
            android:textSize="25dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnChallenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:text="@string/strChallenge"
            android:textColor="#8a2b01"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:text="@string/strRules"
            android:textColor="#8a2b01"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnHelpUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:text="@string/strHelpUs"
            android:textColor="#8a2b01"
            android:textSize="18dp"
            android:textStyle="bold" />

</LinearLayout>
