<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="7.1"
    android:background="@drawable/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvNewDitloid"
        android:textSize="50dp"
        android:height="10dp"
        android:layout_gravity="center"
        style="@style/AppTheme"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:layout_weight="4" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/tvCategory"
        android:gravity="center_horizontal"
        android:textSize="25dp"
        android:visibility="invisible"
        android:layout_weight=".2" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".3">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etSolution"
            android:capitalize="none"
            android:layout_weight="1.02"
            android:fontFeatureSettings="@string/abc_capital_off"
            android:layout_marginTop="5dp" />

        <Button
            android:background="@drawable/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strCheckSolution"
            android:id="@+id/btnCheck"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:textColor="#8a2b01"
            android:textStyle="bold"
            android:textSize="18dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvHelp"
        android:allowUndo="false"
        android:autoText="false"
        android:gravity="center_horizontal"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_weight="2"
        android:textSize="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_weight=".3">

        <Button
            android:background="@drawable/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strGetCategory"
            android:id="@+id/btnGetCategory"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:textColor="#8a2b01"
            android:textStyle="bold"
            android:textSize="15dp" />

        <Button
            android:background="@drawable/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strGetHint"
            android:id="@+id/btnGetHint"
            android:layout_gravity="right"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:textColor="#8a2b01"
            android:textStyle="bold"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".3">

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tvStars"
            android:textSize="30dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="60dp" />

        <TextView
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tvCredits"
            android:gravity="right"
            android:textSize="30dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="60dp" />
    </LinearLayout>

</LinearLayout>